--- a/style.css
+++ b/style.css
@@ -17,4 +17,11 @@ body {
     font-size: 90px;
     box-shadow: 1px 1px 10px;
     padding: 0px 5px 0px 5px;
+    width: 40%;
+    height: 130px;
+    line-height: 130px;
+    text-align: center;
+    text-shadow: 5px 5px 5px blue;
+    background: linear-gradient(to right, #805, #099);
+    border-radius: 30px;
 }
