--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     height: 130px;
     line-height: 130px;
     text-align: center;
-    text-shadow: 5px 5px 5px blue;
+    text-shadow: 5px 5px 5px red;
     background: linear-gradient(to right, #805, #099);
     border-radius: 30px;
 }
