--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     background-image: url(keren.img);
     background: linear-gradient(to right, #434343, #444532);
     font-family: batmanforeveroutline;
+    font-size: 100px;
+    font-style: inherit;
+    text-align: center;
 }
 
 .clock {
@@ -14,7 +17,7 @@ body {
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     color: cyan;
-    font-size: 90px;
+    font-size: 100px;
     box-shadow: 1px 1px 10px;
     padding: 0px 5px 0px 5px;
     width: 95%;
