--- a/style.css
+++ b/style.css
@@ -9,6 +9,21 @@ body {
     font-size: 100px;
     font-style: inherit;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: cyan;
+    font-size: 100px;
+    box-shadow: 1px 1px 10px;
+    padding: 0px 5px 0px 5px;
+    width: 95%;
+    height: 130px;
+    line-height: 130px;
+    text-align: center;
+    text-shadow: 5px 5px 5px red;
+    background: linear-gradient(to right, #805, #099);
+    border-radius: 30px;
 }
 
 .clock {
